[package]
name = "vulkan-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = { version = "1.23.0", features = ["derive"] }
cgmath = "0.18.0"
glob = "0.3"
tobj = { version = "3.2", default-features = false, features = ["async"] }
anyhow = "1.0"
instant = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
imgui-wgpu = "0.25.0"
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
zstd = "0.13.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
